--- a/docker-compose_local.yml
+++ b/docker-compose_local.yml
@@ -25,9 +25,10 @@ services:
     container_name: frontend
     restart: unless-stopped
     ports:
-      - "80:80"
+      - "5173:5173"
     depends_on:
       - api
+    command: ["npm","run","dev","--","--host","0.0.0.0","--port","5173"]
 
 volumes:
   mongo_data:
